--- a/edge_privacy_networkx.ipynb
+++ b/edge_privacy_networkx.ipynb
@@ -32,10 +32,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reserved-arabic",
+   "id": "therapeutic-underground",
    "metadata": {},
    "source": [
-    "---"
+    "<hr style=\"border:2px solid gray\"> </hr>"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "id": "indirect-trance",
    "metadata": {},
    "source": [
-    "## 1. Triangle Counts\n",
+    "## Triangle Counts\n",
     "We construct a differentially private release mechanism for the number of triangles in a graph. This process is comprised of three steps:\n",
     "  1. Compute the exact query response,\n",
     "  2. Compute the smooth sensitivity of the query,\n",
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "polyphonic-cannon",
+   "id": "deadly-remains",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "different-quarterly",
+   "id": "broken-employee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,8 +307,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exact triangle count = 92361\n",
-      "Differentially private triangle count = 92354.871615\n"
+      "Exact triangle count = 91512\n",
+      "Differentially private triangle count = 91512.851895\n"
      ]
     }
    ],
@@ -319,18 +319,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "narrative-butterfly",
+   "id": "authorized-heart",
    "metadata": {},
    "source": [
-    "---"
+    "<hr style=\"border:2px solid gray\"> </hr>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "incredible-farmer",
+   "id": "induced-facing",
    "metadata": {},
    "source": [
-    "## 2. Cost of a Minimum Spanning Tree\n",
+    "## Cost of a Minimum Spanning Tree\n",
     "We construct a differentially private release mechanism for the cost of a minimum spanning tree. As before, this process is comprised of three steps:\n",
     "  1. Compute the exact query response,\n",
     "  2. Compute the smooth sensitivity of the query,\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "designing-techno",
+   "id": "accessory-arnold",
    "metadata": {},
    "source": [
     "### Compute the exact query response"
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brief-nigeria",
+   "id": "minor-official",
    "metadata": {},
    "source": [
     "#### Generate a random graph"
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "increased-karaoke",
+   "id": "native-vienna",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "presidential-amazon",
+   "id": "smaller-contrary",
    "metadata": {},
    "source": [
     "#### Compute the exact cost of a minimum spanning tree"
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "portable-economy",
+   "id": "ready-smoke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "annoying-recorder",
+   "id": "parental-surgeon",
    "metadata": {},
    "source": [
     "### Compute the smooth sensitivity of the query"
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "artistic-duration",
+   "id": "light-worship",
    "metadata": {},
    "source": [
     "As per Nissim et al, let $G = (V, E)$ be a graph with vertex set $V$ and edge set $E$. For every $S \\subset V$ we can define a cut to be the partition $(S, V \\setminus S)$. We say an edge $(i,j)$ crosses the cut $S$ when $i \\in S$ and $j \\in V \\setminus S$. For a cut $S \\subset V$, let $w_t(S)$ denote the weight of the $t$-lightest edge in the cut. In the paper, the authors show that\n",
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "unable-italic",
+   "id": "eastern-screw",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "stylish-studio",
+   "id": "proprietary-breakdown",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "racial-threat",
+   "id": "competent-danish",
    "metadata": {},
    "source": [
     "#### Compute $\\max_{S \\subset V} w_{k+1}(S)$ for all $0 \\leq k \\leq n$."
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "refined-roots",
+   "id": "talented-satisfaction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fossil-priest",
+   "id": "suspended-traveler",
    "metadata": {},
    "source": [
     "#### Compute $\\max_{e \\in T} \\left(\\max_{e-\\text{cuts} \\ S} \\left(w_{k+2} - w_1(S)\\right)\\right)$ for all $0 \\leq k \\leq n$"
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "black-dairy",
+   "id": "minute-study",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "running-armstrong",
+   "id": "outside-charm",
    "metadata": {},
    "source": [
     "#### Compute smooth sensitivity"
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "partial-accordance",
+   "id": "opposite-conditioning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bearing-appendix",
+   "id": "virtual-acrobat",
    "metadata": {},
    "source": [
     "### Add noise scaled according to the smooth sensitvity\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "wanted-catholic",
+   "id": "sudden-above",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endangered-governor",
+   "id": "directed-collaboration",
    "metadata": {},
    "source": [
     "#### Display results"
@@ -588,15 +588,15 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "strategic-murray",
+   "id": "superior-quantum",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exact MST cost = 285.000000\n",
-      "Differentially private MST cost = 283.993926\n"
+      "Exact MST cost = 277.000000\n",
+      "Differentially private MST cost = 276.655904\n"
      ]
     }
    ],
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "knowing-integral",
+   "id": "indie-collect",
    "metadata": {},
    "outputs": [],
    "source": []
