--- a/edge_privacy_networkx.ipynb
+++ b/edge_privacy_networkx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "frank-senator",
+   "id": "organic-guinea",
    "metadata": {},
    "source": [
     "# Edge Privacy\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "synthetic-portrait",
+   "id": "sixth-immigration",
    "metadata": {},
    "source": [
     "## Library Imports\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fifty-edinburgh",
+   "id": "statutory-murder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alpine-poultry",
+   "id": "sudden-excitement",
    "metadata": {},
    "source": [
     "<hr style=\"border:2px solid gray\"> </hr>"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continued-westminster",
+   "id": "injured-shooting",
    "metadata": {},
    "source": [
     "## Triangle Counts\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aware-drawing",
+   "id": "smooth-theory",
    "metadata": {},
    "source": [
     "### Compute the exact query response"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tight-nomination",
+   "id": "better-attempt",
    "metadata": {},
    "source": [
     "#### Generate a random graph"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "corresponding-plenty",
+   "id": "interesting-selection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "veterinary-theta",
+   "id": "friendly-badge",
    "metadata": {},
    "source": [
     "#### Compute the exact triangle count"
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "connected-lewis",
+   "id": "beneficial-therapy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "similar-survivor",
+   "id": "patent-details",
    "metadata": {},
    "source": [
     "### Compute the smooth sensitivity of the query"
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outdoor-panel",
+   "id": "russian-viewer",
    "metadata": {},
    "source": [
     "#### Compute the partial count matrices\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "extended-literacy",
+   "id": "amended-jamaica",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "charitable-tamil",
+   "id": "color-tuning",
    "metadata": {},
    "source": [
     "#### Compute the local sensitivity at distance $s$ for $0 \\leq s \\leq n$\n",
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "olympic-motorcycle",
+   "id": "liberal-nothing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "official-singer",
+   "id": "smooth-inquiry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "hydraulic-greensboro",
+   "id": "flying-skill",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "changing-priority",
+   "id": "dimensional-bloom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sporting-words",
+   "id": "presidential-lawsuit",
    "metadata": {},
    "source": [
     "### Add noise scaled according to the smooth sensitvity\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "motivated-graduation",
+   "id": "continental-actor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fancy-scoop",
+   "id": "fitting-hydrogen",
    "metadata": {},
    "source": [
     "#### Display results"
@@ -300,15 +300,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "technical-battery",
+   "id": "hairy-roberts",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exact triangle count = 92040\n",
-      "Differentially private triangle count = 92041.455515\n"
+      "Exact triangle count = 91765\n",
+      "Differentially private triangle count = 91763.400858\n"
      ]
     }
    ],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aggressive-possible",
+   "id": "collectible-poultry",
    "metadata": {},
    "source": [
     "<hr style=\"border:2px solid gray\"> </hr>"
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regulation-racing",
+   "id": "framed-silence",
    "metadata": {},
    "source": [
     "## Cost of a Minimum Spanning Tree\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impossible-license",
+   "id": "linear-filing",
    "metadata": {},
    "source": [
     "### Compute the exact query response"
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surgical-sunrise",
+   "id": "short-collectible",
    "metadata": {},
    "source": [
     "#### Generate a random graph"
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "stunning-oriental",
+   "id": "violent-router",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "common-antibody",
+   "id": "stopped-panel",
    "metadata": {},
    "source": [
     "#### Compute the exact cost of a minimum spanning tree"
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "korean-sperm",
+   "id": "charged-cookbook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "public-apartment",
+   "id": "micro-american",
    "metadata": {},
    "source": [
     "### Compute the smooth sensitivity of the query"
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naughty-router",
+   "id": "outdoor-permit",
    "metadata": {},
    "source": [
     "As per Nissim et al, let $G = (V, E)$ be a graph with vertex set $V$ and edge set $E$. For every $S \\subset V$ we can define a cut to be the partition $(S, V \\setminus S)$. We say an edge $(i,j)$ crosses the cut $S$ when $i \\in S$ and $j \\in V \\setminus S$. For a cut $S \\subset V$, let $w_t(S)$ denote the weight of the $t$-lightest edge in the cut. In the paper, the authors show that\n",
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "returning-holmes",
+   "id": "downtown-guess",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "another-clearance",
+   "id": "filled-appearance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pacific-pavilion",
+   "id": "opposite-office",
    "metadata": {},
    "source": [
     "#### Compute $\\max_{S \\subset V} w_{k+1}(S)$ for all $0 \\leq k \\leq n$."
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "accessory-credits",
+   "id": "compressed-lecture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recorded-frame",
+   "id": "offensive-turning",
    "metadata": {},
    "source": [
     "#### Compute $\\max_{e \\in T} \\left(\\max_{e-\\text{cuts} \\ S} \\left(w_{k+2} - w_1(S)\\right)\\right)$ for all $0 \\leq k \\leq n$"
@@ -512,8 +512,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "unsigned-fifty",
+   "execution_count": 16,
+   "id": "provincial-gregory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "according-detector",
+   "id": "going-rescue",
    "metadata": {},
    "source": [
     "#### Compute smooth sensitivity"
@@ -540,8 +540,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "protected-popularity",
+   "execution_count": 17,
+   "id": "saving-courage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "final-wallpaper",
+   "id": "positive-mandate",
    "metadata": {},
    "source": [
     "### Add noise scaled according to the smooth sensitvity\n",
@@ -565,8 +565,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "welsh-alpha",
+   "execution_count": 18,
+   "id": "systematic-lindsay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ordered-median",
+   "id": "august-columbus",
    "metadata": {},
    "source": [
     "#### Display results"
@@ -587,10 +587,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "packed-venezuela",
+   "execution_count": 19,
+   "id": "liable-driver",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exact MST cost = 279.000000\n",
+      "Differentially private MST cost = 279.447695\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Exact MST cost = %f\" % mst_cost)\n",
     "print(\"Differentially private MST cost = %f\" % dp_mst_cost)"
@@ -599,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "central-george",
+   "id": "unique-title",
    "metadata": {},
    "outputs": [],
    "source": []
