Inserted "differential" into node and edge differential privacy titles

--- a/node_differential_privacy.ipynb
+++ b/node_differential_privacy.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "close-anaheim",
+   "id": "interim-accent",
    "metadata": {},
    "source": [
-    "# Node Privacy\n",
+    "# Node Differential Privacy\n",
     "Reference implementations of some of the techniques described in the paper\n",
     "[Analyzing Graphs with Node Differential Privacy](https://privacytools.seas.harvard.edu/files/privacytools/files/chp3a10.10072f978-3-642-36594-2_26.pdf)\n",
     "by Shiva Prasad Kasiviswanathan, Kobbi Nissim, Sofya Raskhodnikova, and Adam Smith."
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "addressed-alabama",
+   "id": "metropolitan-comedy",
    "metadata": {},
    "source": [
     "## Library Imports\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "sustainable-justice",
+   "id": "greek-future",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liberal-fiber",
+   "id": "warming-photography",
    "metadata": {},
    "source": [
     "<hr style=\"border:2px solid gray\"> </hr>"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "negative-growing",
+   "id": "selected-contract",
    "metadata": {},
    "source": [
     "## Convex Optimisation\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "usual-boutique",
+   "id": "junior-brand",
    "metadata": {},
    "source": [
     "#### Generate a random graph"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "neither-dublin",
+   "id": "charged-repeat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assisted-feature",
+   "id": "functional-orientation",
    "metadata": {},
    "source": [
     "### Compute the exact query responses\n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "olive-newton",
+   "id": "neutral-crossing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "painful-period",
+   "id": "charitable-clause",
    "metadata": {},
    "source": [
     "#### Compute the exact counts"
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "tracked-hawaiian",
+   "id": "wicked-richmond",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "egyptian-reset",
+   "id": "structured-presence",
    "metadata": {},
    "source": [
     "### Build the flow graph\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "municipal-insertion",
+   "id": "plastic-victory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "acknowledged-prince",
+   "id": "formed-apollo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collaborative-preparation",
+   "id": "crude-update",
    "metadata": {},
    "source": [
     "### Solve the required convex optimisation problem\n",
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "korean-fisher",
+   "id": "english-grenada",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dominican-kitchen",
+   "id": "selective-favorite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pressing-slovak",
+   "id": "floating-dominant",
    "metadata": {},
    "source": [
     "### Add noise scaled according to the sensitivity of the bounded-degree quasiflow\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "skilled-secretary",
+   "id": "accurate-timothy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "about-papua",
+   "id": "precise-object",
    "metadata": {},
    "source": [
     "#### Display results"
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "rural-execution",
+   "id": "grateful-professor",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "voluntary-activity",
+   "id": "biological-assist",
    "metadata": {},
    "source": [
     "<hr style=\"border:2px solid gray\"> </hr>"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "maritime-database",
+   "id": "wrong-strip",
    "metadata": {},
    "source": [
     "## Linear Programming\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unusual-supplement",
+   "id": "whole-ordinary",
    "metadata": {},
    "source": [
     "#### Generate a random graph"
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "chubby-feelings",
+   "id": "atmospheric-flexibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resistant-concentration",
+   "id": "manual-appointment",
    "metadata": {},
    "source": [
     "### Compute the exact query responses\n",
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "occasional-dealer",
+   "id": "instrumental-passenger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "running-cholesterol",
+   "id": "frank-radiation",
    "metadata": {},
    "source": [
     "### Formulate linear programming problem\n",
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "atlantic-quarterly",
+   "id": "quality-avenue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hired-beauty",
+   "id": "second-exploration",
    "metadata": {},
    "source": [
     "### Solve linear programming problem\n",
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "premier-messenger",
+   "id": "removable-george",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greatest-integration",
+   "id": "difficult-helena",
    "metadata": {},
    "source": [
     "### Add noise scaled according to the sensitivity of the linear program solution\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "solved-angle",
+   "id": "fitting-cutting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occasional-withdrawal",
+   "id": "continental-myrtle",
    "metadata": {},
    "source": [
     "#### Display results"
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "alleged-munich",
+   "id": "unlikely-florida",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "southwest-mayor",
+   "id": "incorporate-indian",
    "metadata": {},
    "outputs": [],
    "source": []
