--- a/edge_differential_privacy.ipynb
+++ b/edge_differential_privacy.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "organic-guinea",
+   "id": "patent-broadcasting",
    "metadata": {},
    "source": [
-    "# Edge Privacy\n",
+    "# Edge Differential Privacy\n",
     "Reference implementations of techniques described in the paper [Smooth Sensitivity and Sampling in Private Data Analysis](https://cs-people.bu.edu/ads22/pubs/NRS07/NRS07-full-draft-v1.pdf) by Kobbi Nissim, Sofya Raskhodnikova, and Adam Smith."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "sixth-immigration",
+   "id": "incomplete-solomon",
    "metadata": {},
    "source": [
     "## Library Imports\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "statutory-murder",
+   "id": "suspected-batman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sudden-excitement",
+   "id": "hybrid-magazine",
    "metadata": {},
    "source": [
     "<hr style=\"border:2px solid gray\"> </hr>"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "injured-shooting",
+   "id": "expected-beginning",
    "metadata": {},
    "source": [
     "## Triangle Counts\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smooth-theory",
+   "id": "committed-standard",
    "metadata": {},
    "source": [
     "### Compute the exact query response"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "better-attempt",
+   "id": "introductory-isaac",
    "metadata": {},
    "source": [
     "#### Generate a random graph"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "interesting-selection",
+   "id": "major-trick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "friendly-badge",
+   "id": "expired-granny",
    "metadata": {},
    "source": [
     "#### Compute the exact triangle count"
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "beneficial-therapy",
+   "id": "everyday-cooking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patent-details",
+   "id": "macro-justice",
    "metadata": {},
    "source": [
     "### Compute the smooth sensitivity of the query"
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "russian-viewer",
+   "id": "fluid-operations",
    "metadata": {},
    "source": [
     "#### Compute the partial count matrices\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "amended-jamaica",
+   "id": "sixth-winter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "color-tuning",
+   "id": "loving-albuquerque",
    "metadata": {},
    "source": [
     "#### Compute the local sensitivity at distance $s$ for $0 \\leq s \\leq n$\n",
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "liberal-nothing",
+   "id": "complicated-sculpture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "smooth-inquiry",
+   "id": "japanese-blowing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "flying-skill",
+   "id": "ultimate-nirvana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dimensional-bloom",
+   "id": "crude-stanford",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "presidential-lawsuit",
+   "id": "beautiful-convenience",
    "metadata": {},
    "source": [
     "### Add noise scaled according to the smooth sensitvity\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "continental-actor",
+   "id": "outside-documentation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fitting-hydrogen",
+   "id": "appointed-clarity",
    "metadata": {},
    "source": [
     "#### Display results"
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "hairy-roberts",
+   "id": "korean-death",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collectible-poultry",
+   "id": "industrial-clearance",
    "metadata": {},
    "source": [
     "<hr style=\"border:2px solid gray\"> </hr>"
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "framed-silence",
+   "id": "overhead-butter",
    "metadata": {},
    "source": [
     "## Cost of a Minimum Spanning Tree\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "linear-filing",
+   "id": "finnish-identity",
    "metadata": {},
    "source": [
     "### Compute the exact query response"
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "short-collectible",
+   "id": "integral-replication",
    "metadata": {},
    "source": [
     "#### Generate a random graph"
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "violent-router",
+   "id": "suspended-toronto",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stopped-panel",
+   "id": "rising-combine",
    "metadata": {},
    "source": [
     "#### Compute the exact cost of a minimum spanning tree"
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "charged-cookbook",
+   "id": "difficult-iraqi",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "micro-american",
+   "id": "endless-consensus",
    "metadata": {},
    "source": [
     "### Compute the smooth sensitivity of the query"
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outdoor-permit",
+   "id": "iraqi-schedule",
    "metadata": {},
    "source": [
     "As per Nissim et al, let $G = (V, E)$ be a graph with vertex set $V$ and edge set $E$. For every $S \\subset V$ we can define a cut to be the partition $(S, V \\setminus S)$. We say an edge $(i,j)$ crosses the cut $S$ when $i \\in S$ and $j \\in V \\setminus S$. For a cut $S \\subset V$, let $w_t(S)$ denote the weight of the $t$-lightest edge in the cut. In the paper, the authors show that\n",
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "downtown-guess",
+   "id": "editorial-services",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "filled-appearance",
+   "id": "formal-washer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opposite-office",
+   "id": "inside-shanghai",
    "metadata": {},
    "source": [
     "#### Compute $\\max_{S \\subset V} w_{k+1}(S)$ for all $0 \\leq k \\leq n$."
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "compressed-lecture",
+   "id": "coastal-offer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "offensive-turning",
+   "id": "animal-lafayette",
    "metadata": {},
    "source": [
     "#### Compute $\\max_{e \\in T} \\left(\\max_{e-\\text{cuts} \\ S} \\left(w_{k+2} - w_1(S)\\right)\\right)$ for all $0 \\leq k \\leq n$"
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "provincial-gregory",
+   "id": "unlikely-behalf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "going-rescue",
+   "id": "juvenile-hunter",
    "metadata": {},
    "source": [
     "#### Compute smooth sensitivity"
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "saving-courage",
+   "id": "dimensional-crest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "positive-mandate",
+   "id": "under-spirituality",
    "metadata": {},
    "source": [
     "### Add noise scaled according to the smooth sensitvity\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "systematic-lindsay",
+   "id": "standard-settle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "august-columbus",
+   "id": "norman-hamburg",
    "metadata": {},
    "source": [
     "#### Display results"
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "liable-driver",
+   "id": "printable-spokesman",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unique-title",
+   "id": "other-manufacturer",
    "metadata": {},
    "outputs": [],
    "source": []
