--- a/egocentric_betweenness_centrality.ipynb
+++ b/egocentric_betweenness_centrality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "upset-carter",
+   "id": "virtual-growth",
    "metadata": {},
    "source": [
     "# Differentially Private Egocentric Betweenness Centrality\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supported-visibility",
+   "id": "recreational-naples",
    "metadata": {},
    "source": [
     "## Library Imports\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ultimate-hollow",
+   "id": "enhanced-solid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loaded-shaft",
+   "id": "boxed-german",
    "metadata": {},
    "source": [
     "## Ground Truth Algorithm\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "appropriate-bridal",
+   "id": "complex-small",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "finnish-produce",
+   "id": "amended-conservation",
    "metadata": {},
    "source": [
     "## Generate a Random Graph \n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "neutral-services",
+   "id": "alternative-sight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "alpha-auckland",
+   "id": "sixth-plymouth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "frequent-handling",
+   "id": "quantitative-empty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "lightweight-mapping",
+   "id": "enormous-norway",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collectible-collectible",
+   "id": "integrated-fabric",
    "metadata": {},
    "source": [
     "## Warm-Up: A Non-Private Protocol\n",
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "meaning-humidity",
+   "id": "present-garlic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "specialized-disabled",
+   "id": "virtual-evening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cordless-evidence",
+   "id": "derived-opportunity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fluid-mobile",
+   "id": "architectural-server",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "swiss-sphere",
+   "id": "driving-tractor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "laughing-swift",
+   "id": "controlled-elimination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "structured-corporation",
+   "id": "naughty-nitrogen",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "scientific-ministry",
+   "id": "individual-adams",
    "metadata": {},
    "outputs": [
     {
@@ -349,14 +349,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "split-headquarters",
+   "id": "comprehensive-happiness",
    "metadata": {},
    "source": [
     "## A Privacy-Preserving Protocol\n",
     "\n",
     "Here we augment the ingerdients that we used to compute the exact EBC with some differentially private release mechanisms.  This allows us to create a differentially-private release mechanism that produces differentially-private estimates of the EBC.\n",
     "\n",
-    "We will use the implementation of the Laplace mechanism provided in the package [relm](https://github.com/anusii/RelM).\n",
+    "We will use the implementation of the Laplace mechanism provided in the package [RelM](https://github.com/anusii/RelM).\n",
     "\n",
     "We also use a version of the exponential mechanism described by the authors in the paper. We cannot easily use the standard exponential mechanism becuase we need to sample from a large state space and the naive mechanism cannot do so efficiently.  Instead, we implement the authors' suggested stratified sampling strategy sample from this state space."
    ]
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recovered-ivory",
+   "id": "awful-purple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "plain-consent",
+   "id": "peaceful-cameroon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "powerful-combining",
+   "id": "unlike-cloud",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subject-nudist",
+   "id": "public-haven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,12 +465,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "talented-terror",
+   "id": "initial-tuner",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use the differentially private algorithm to compute an estimate of the EBC of a.\n",
-    "\n",
     "private_ebc = private_protocol(a, Vx, Vy, Ex, Ey, Exy)\n",
     "print(private_ebc)"
    ]
@@ -478,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eleven-benchmark",
+   "id": "decent-funds",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adult-novelty",
+   "id": "animal-graham",
    "metadata": {},
    "outputs": [],
    "source": []
